erDiagram
    direction TB

    SUPPLIER {
        int SupplierID PK
        string SupplierName
        string SupplierCategory
    }

    SUPPLIERDELIVERY {
        int InvoiceID PK
        int SupplierID FK
        int SupplyItemID FK
        int Quantity
        date ExpectedDelivery
        date ActualDelivery
    }

    SUPPLY_ITEM {
        int SupplyItemID PK
        string ItemName
        string ItemCategory
    }

    WINE_INVENTORY {
        int WineInventoryID PK
        int WineID FK
        int QuantityOnHand
    }

    WINE {
        int WineID PK
        string WineName
        string WineType
        int YearProduced
    }

    DIST {
        int DistID PK
        string DistName
        string DistPhone
        string DistAddress
        string DistEmail
    }

    DISTORDER {
        int OrderID PK
        int DistID FK
        date OrderDate
    }

    ORDERITEM {
        int OrderItemID PK
        int OrderID FK
        int WineID FK
        int Quantity
    }

    SHIPPINGSERVICE {
        int ShipperID PK
        string ShipperName
        string ShipperPhone
        string ShipperWeb
    }

    SHIPMENT {
        int ShipmentID PK
        int OrderID FK
        date ShipmentDate
        string TrackingNumber
        int ShippingService FK
    }

    WINETODIST {
        int WD_ID PK
        int WineID FK
        int DistributorID FK
    }

    %% RELATIONSHIPS
    SUPPLIER ||--o{ SUPPLIERDELIVERY : supplies
    SUPPLY_ITEM ||--o{ SUPPLIERDELIVERY : includes

    WINE ||--o{ WINE_INVENTORY : stored_in
    WINE ||--o{ ORDERITEM : ordered_in

    DIST ||--o{ DISTORDER : places
    DISTORDER ||--o{ ORDERITEM : contains

    SHIPPINGSERVICE ||--o{ SHIPMENT : ships
    DISTORDER ||--o{ SHIPMENT : shipment_for

    WINE ||--o{ WINETODIST : distributed_by
    DIST ||--o{ WINETODIST : distributes
